# laba7-8

./: .travis.yml  CMakeLists.txt
include/: log.h
sources/: log.cpp  main.cpp
